# xhash

./: .bumpversion.cfg  .clang-tidy  CHANGELOG.md  CMakeLists.txt  README.md  appveyor.yml  circle.yml  setup.py
bindings/python/tests/: test_ethash.py
bindings/python/xhash/: __init__.py  _build.py
cmake/: Config.cmake.in
cmake/Hunter/: config.cmake  init.cmake
include/xhash/: global_context.h  global_context.hpp  hash_types.h  hash_types.hpp  keccak.h  keccak.hpp  sha3.h  sha3.hpp  version.h  xhash.h  xhash.hpp
lib/: CMakeLists.txt
lib/global_context/: CMakeLists.txt  global_context.cpp
lib/keccak/: CMakeLists.txt  keccak.c
lib/sha3/: CMakeLists.txt  sha3.c
lib/support/: attributes.h
lib/xhash/: CMakeLists.txt  endianness.hpp  primes.c  primes.h  xhash-internal.hpp  xhash.cpp
scripts/ci/: python_build_wheels.sh
test/: CMakeLists.txt
test/benchmarks/: CMakeLists.txt  global_context_benchmarks.cpp  keccak_benchmarks.cpp  keccak_utils.cpp  keccak_utils.hpp  threadsync_benchmarks.cpp  threadsync_utils.cpp  threadsync_utils.hpp  xhash_benchmarks.cpp
test/experimental/: CMakeLists.txt  difficulty.cpp  difficulty.h
test/fakeminer/: CMakeLists.txt  fakeminer.cpp
test/integration/: CMakeLists.txt
test/integration/cmake-config/: CMakeLists.txt  cmake_config_test.cpp
test/integration/compilation/: CMakeLists.txt  xhash_header_test.c
test/unittests/: CMakeLists.txt  helpers.hpp  test_cases.hpp  test_difficulty.cpp  test_global_context.cpp  test_keccak.cpp  test_primes.cpp  test_sha3.cpp  test_version.cpp  test_xhash.cpp
